<resources>
    <string name="app_name">D\&amp;D On Target</string>
    <string name="CharacterName">Character Name</string>
    <string name="DelCharacter">Delete Character</string>
    <string name="AddEditAttackButton">Add/Edit Attack</string>
    <string name="AddNewCharacter">Add a new character</string>
    <string name="Roller">Select Attacks</string>
    <string name="self_destruct">self_destruct</string>
    <string name="numberOfDiceInputHint">How many dice?</string>
    <string name="diceTypeInputGuide">What sided die?</string>
    <string name="atkNameInputGuide">What is the name of the attack?</string>
    <string name="hitModInputGuide">What is the Hit Modifier?</string>
    <string name="damageModInputGuide">What is the Damage Modifier?</string>
    <string-array name="diceType_array">
        <item>Choose...</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>20</item>
    </string-array>
    <string-array name="options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="characterOptions">
        <item>Save</item>
        <item>Delete</item>
    </string-array>
</resources>
